force-app/main/default/objects/ContentVersion/ContentVersion.object-meta.xml
<CustomObject>   
     <recordTypes>
        <fullName>ReferralHub</fullName>
        <active>true</active>
        <label>ReferralHub</label>
    </recordTypes>


</CustomObject>