force-app/main/default/objects/ContentVersion/fields/Accepted__c.field-meta.xml
<CustomField>
    <fullName>Accepted__c</fullName>
    <label>Accepted Records</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>