force-app/main/default/objects/ContentVersion/fields/FileSharedbyPI__c.field-meta.xml
<CustomField>
    <fullName>FileSharedbyPI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is getting used when PI share file to Patient Portal via health information tab</description>
    <inlineHelpText>Field will be checked when PI will share file to Patient</inlineHelpText>
    <label>FileSharedbyPI</label>
    <type>Checkbox</type>
</CustomField>