force-app/main/default/objects/ContentVersion/fields/FileStatus__c.field-meta.xml
<CustomField>
    <fullName>FileStatus__c</fullName>
    <description>This field is getting used for document upload feature under files tab</description>
    <label>FileStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Uploaded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>