force-app/main/default/objects/ContentVersion/fields/Initial_Total_Records__c.field-meta.xml
<CustomField>
    <fullName>Initial_Total_Records__c</fullName>
    <label>Initial Total Records</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>