force-app/main/default/objects/ContentVersion/fields/LanguageCode__c.field-meta.xml
<CustomField>
    <fullName>LanguageCode__c</fullName>
    <label>LanguageCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>