force-app/main/default/objects/ContentVersion/fields/progress__c.field-meta.xml
<CustomField>
    <fullName>progress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>progress</label>
    <length>10</length>
    <type>Text</type>
</CustomField>