force-app/main/default/objects/ContentVersion/fields/Rejected_Records__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Records__c</fullName>
    <label>Rejected Records</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>