force-app/main/default/objects/ContentVersion/recordTypes/ReferralHub.recordType-meta.xml
<RecordType>
    <fullName>ReferralHub</fullName>
    <active>true</active>
    <label>ReferralHub</label>
</RecordType>